<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:stretchColumns="1"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<TableRow>
		<TextView
			android:layout_span="2"
			android:layout_column="1"
			android:layout_height="wrap_content"
			android:text="@string/edit_number"
			android:layout_width="fill_parent"
			android:layout_marginTop="20dip"
			android:layout_marginBottom="5dip"
			android:textSize="20dip"
			android:layout_marginLeft="10dip"/>
	</TableRow>
	<TableRow>
		<EditText android:id="@+id/te_phone"
			android:layout_span="2"
			android:layout_column="1"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:textSize="30dip"
			android:inputType="phone" android:onClick="onClick"/>
	</TableRow>
	<TableRow>
		<TextView android:id="@+id/edit_name"
			android:layout_span="2"
			android:layout_column="1"
			android:text="@string/unknown"
			android:layout_marginLeft="10dip"
			android:textColor="#ffCC33"
		 	android:layout_width="fill_parent"
		 	android:layout_height="wrap_content"/>
	</TableRow>
	<TableRow>
		<TextView
			android:layout_span="2"
			android:layout_column="1"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dip"
			android:layout_marginTop="20dip"
			android:layout_width="fill_parent"
			android:text="@string/edit_code"
			android:textSize="20dip"
			android:layout_marginLeft="10dip"/>
	</TableRow>
	<TableRow>
		<EditText android:id="@+id/te_code"
			android:layout_column="1"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:textSize="30dip"
			android:inputType="text|textCapCharacters"/>
		<ImageButton android:id="@+id/btn_play"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="onClick"
			android:src="@drawable/play_code"/>
	</TableRow>
	<TableRow>
		<CheckBox android:id="@+id/cb_active"
			android:layout_span="2"
			android:layout_column="1"
			android:layout_height="wrap_content"
			android:text="@string/edit_active"
			android:textSize="20dip"
			android:layout_width="wrap_content"
			android:layout_marginRight="20dip"
			android:onClick="onClick"/>
	</TableRow>
</TableLayout>
